# DoNiLivekit

./: .gitignore  PROJECT_GUIDE.md  README.md  app.py  main.py  package-lock.json  package.json  requirements.txt
docs/: ARCHITECTURE.md  AUDIO_PIPELINE.md  FRONTEND_GUIDE.md  TROUBLESHOOTING.md
livekit_old/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
ui/: components.json  index.css  index.html  index.js  package-lock.json  package.json  pcm-worker.js  tailwind.config.js  vite.config.js
ui/public/: pcm-worker.js
ui/src/: App.vue  main.js
ui/src/app/: README.md  runtime.js
ui/src/assets/: index.css
ui/src/components/: README.md
ui/src/components/chat/: ChatPanel.vue
ui/src/components/common/: BaseAvatar.vue  BaseButton.vue
ui/src/components/controls/: ControlDock.vue
ui/src/components/main/: MainStage.vue
ui/src/components/modals/: AppAudioModal.vue
ui/src/components/settings/: AudioSettingsModal.vue  ProfileSettingsPanel.vue
ui/src/components/sidebar/: ChannelList.vue  ParticipantList.vue  SidebarPanel.vue  (+1 more)
ui/src/features/: README.md  appAudio.js  audioPipelines.js  chat.js  chatClient.js  devices.js  livekitEvents.js  participantVolumes.js  participants.js  presenceClient.js  remoteAudio.js  roomConnection.js  rustMic.js  screenShare.js
ui/src/legacy/: client.js
ui/src/shared/: README.md  apiClient.js  constants.js  errors.js  messageRenderer.js  tauri.js  text.js
ui/src/stores/: README.md  appStore.js  chatStore.js  presenceStore.js  profileStore.js  themeStore.js
ui_old/: index.css  index.js
