[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
# 系统进程扫描雷达
sysinfo = "0.30" 
# 异步并发心脏
tokio = { version = "1", features = ["full"] } 
# 本地 WebSocket 高铁
tokio-tungstenite = "0.20" 
futures-util = "0.3" 
# 微软官方 Windows 底层核武器
nnnoiseless = "0.5.1"

[dependencies.windows]
version = "0.52"
features = [
    "implement",
    "Win32_Media_Audio",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]
